# fm-squad-planner

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20250101000001_create_players_table.sql  20250101000002_create_formations_table.sql  20250101000003_create_roles_table.sql  20250101000004_create_squads_table.sql  20250101000005_create_tactics_table.sql  20250101000006_seed_formations.sql  20250101000007_seed_roles.sql
backend/src/: error.rs  main.rs
backend/src/db/: mod.rs
backend/src/repository/: formation.rs  mod.rs  player.rs  role.rs  squad.rs  tactics.rs
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html  nginx.conf
shared/: Cargo.toml
shared/src/models/: formation.rs  mod.rs  player.rs  role.rs  squad.rs  tactical_role.rs  tactics.rs
