[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.9"
actix-cors = "0.7"
actix-multipart = "0.7"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

# CSV and data processing
polars = { version = "0.44", features = ["lazy", "csv", "dtype-full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Shared models
shared = { path = "../shared" }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Environment variables
dotenvy = "0.15"
