[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Leptos framework
leptos = { version = "0.7" }
leptos_router = { version = "0.7" }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }
gloo-net = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Shared models
shared = { path = "../shared" }

# Utilities
web-sys = "0.3"
wasm-bindgen = "0.2"
